--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "bugs": {
     "url": "https://github.com/osensa/node-red-edgepi-thermocouple/issues"
   },
+  "node-red": {
+    "nodes": {
+      "edgepi-thermocouple": "edgepi-thermocouple.js"
+    }
+  },
   "homepage": "https://github.com/osensa/node-red-edgepi-thermocouple#readme",
   "devDependencies": {
     "node-red": "^2.2.2"
