--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-rpi.gpio
-gpiozero
-spidev
+bitstring==4.0.2
+edgepi-python-sdk==1.1.17
+protobuf==3.20.3
+python-periphery==2.4.1
+
+--extra-index-url https://testpypi.python.org/pypi
+edgepi-python-sdk==1.1.23
