--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "homepage": "https://github.com/osensa/node-red-edgepi-thermocouple#readme",
   "devDependencies": {
     "node-red": "^2.2.2"
+  },
+  "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^9.6.7",
+    "zeromq": "^6.0.0-beta.16"
   }
 }
