--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "install": "^0.13.0",
     "npm": "^9.6.7",
+    "protobufjs": "^7.2.3",
     "zeromq": "^6.0.0-beta.16"
   }
 }
