--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-red-edgepi-thermocouple",
+  "name": "@edgepi-cloud/node-red-edgepi-thermocouple",
   "version": "1.0.0",
   "description": "A node-red node for EdgePi thermocouple module",
   "main": "edgepi-thermocouple.js",
